// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOIListShowAll renders correctly with data and other dois 1`] = `
<DocumentFragment>
  <div
    class="ant-row"
  >
    <div
      class="ant-col"
    >
      <div
        class="__InlineList__"
        data-testid="inline-data-list"
      >
        <span
          class=""
        >
          DOI: 
        </span>
        <ul>
          <li>
            <span>
              <a
                href="//doi.org/doi1"
                target="_blank"
              >
                doi1
              </a>
              <span>
                 (data)
              </span>
            </span>
            , 
          </li>
          <li>
            <span>
              <a
                href="//doi.org/doi2"
                target="_blank"
              >
                doi2
              </a>
              <span>
                 (data)
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="di pl1"
    >
      <button
        class="__SecondaryButton__"
        type="button"
      >
        Show All(3)
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DOIListShowAll renders correctly with dataDois only 1`] = `
<DocumentFragment>
  <div
    class="ant-row"
  >
    <div
      class="ant-col"
    >
      <div
        class="__InlineList__"
        data-testid="inline-data-list"
      >
        <span
          class=""
        >
          DOI: 
        </span>
        <ul>
          <li>
            <span>
              <a
                href="//doi.org/doi1"
                target="_blank"
              >
                doi1
              </a>
              <span>
                 (data)
              </span>
            </span>
            , 
          </li>
          <li>
            <span>
              <a
                href="//doi.org/doi2"
                target="_blank"
              >
                doi2
              </a>
              <span>
                 (data)
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DOIListShowAll renders correctly with default props 1`] = `<DocumentFragment />`;

exports[`DOIListShowAll renders correctly with no dataDois 1`] = `<DocumentFragment />`;
